--- a/test/data/mopack-apt.yml
+++ b/test/data/mopack-apt.yml
@@ -1,7 +1,6 @@
 packages:
   ogg:
     source: apt
-    depends: [libogg-dev]
   zlib:
     source: apt
-    depends: [zlib1g-dev]
+    remote: zlib1g-dev
