Use shell argument splitting for bfg9000 builder's `extra_args` option

--- a/test/data/mopack-nested-extra.yml
+++ b/test/data/mopack-nested-extra.yml
@@ -4,7 +4,7 @@ packages:
     path: nested
     build: &bfg-debug
       type: bfg9000
-      extra_args: ['--extra']
+      extra_args: --extra
 
   hello:
     source: directory
