Rename test data so it's easier to understand

--- a/test/data/mopack-nested-extra.yml
+++ b/test/data/mopack-nested-extra.yml
@@ -1,13 +1,13 @@
 packages:
   greeter:
     source: directory
-    path: nested
+    path: greeter-bfg
     build: &bfg-debug
       type: bfg9000
       extra_args: --extra
 
   hello:
     source: directory
-    path: bfg_project
+    path: hello-bfg
     build: *bfg-debug
 
