--- a/test/data/hello-cmake/CMakeLists.txt
+++ b/test/data/hello-cmake/CMakeLists.txt
@@ -1,4 +1,8 @@
+cmake_minimum_required(VERSION 3.17)
+project(hello)
+
 add_library(hello SHARED src/hello.cpp)
+target_compile_definitions(hello PRIVATE LIBHELLO_EXPORTS)
 target_include_directories(hello PUBLIC include)
 set_target_properties(hello PROPERTIES PUBLIC_HEADER include/hello.hpp)
 
