--- a/test/data/mopack-conan.yml
+++ b/test/data/mopack-conan.yml
@@ -1,10 +1,11 @@
 options:
   sources:
     conan:
+      build: missing
       generator: cmake
 packages:
   zlib:
     source: conan
-    remote: zlib/1.2.11@conan/stable
+    remote: zlib/1.2.11
     options:
       shared: true
