--- a/test/data/mopack-nested-cmake.yml
+++ b/test/data/mopack-nested-cmake.yml
@@ -10,6 +10,6 @@ packages:
     build: cmake
     usage:
       type: path
-      include_path: include
+      include_path: $srcdir/include
       library_path: .
 
