Add support for changing directory in custom builder; resolves #6

--- a/test/data/mopack-custom-builder.yml
+++ b/test/data/mopack-custom-builder.yml
@@ -9,7 +9,8 @@ packages:
           bfg9000 configure $builddir ${{
             deploy_paths['prefix'] ? '--prefix=' + deploy_paths['prefix'] : ''
           }}
-        - ninja -C $builddir/.
+        - cd $builddir/.
+        - ninja
       deploy_commands:
         - ninja install
     usage: pkg-config
