--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
         include:
           - os: ubuntu-latest
             extra-tests: [apt, mingw-cross]
+          - os: windows-latest
+            compiler: cc
+            skipped-tests: [boost]
         exclude:
           - os: ubuntu-latest
             compiler: msvc
@@ -25,6 +28,7 @@ jobs:
       fail-fast: false
     env:
       MOPACK_EXTRA_TESTS: ${{ join(matrix.extra-tests, ' ') }}
+      MOPACK_SKIPPED_TESTS: ${{ join(matrix.skipped-tests, ' ') }}
 
     steps:
       - uses: actions/checkout@v2
@@ -59,7 +63,6 @@ jobs:
           7z x -y gettext-runtime_0.18.1.1-2_win32.zip -oC:\pkg-config
           echo "PKG_CONFIG=C:\pkg-config\bin\pkg-config.exe" >> ${env:GITHUB_ENV}
           echo "BOOST_INCLUDEDIR=$env:BOOST_ROOT_1_72_0" >> ${env:GITHUB_ENV}
-          echo "MOPACK_SKIPPED_TESTS=boost" >> ${env:GITHUB_ENV}
       - name: Install macOS dependencies
         if: matrix.os == 'macos-latest'
         run: |
@@ -77,7 +80,6 @@ jobs:
           conan profile new default --detect
           ${env:CC} = "cl.exe"
           ${env:CXX} = "cl.exe"
-          ${env:MOPACK_SKIPPED_TESTS} = ""
           python setup.py coverage -q
       - name: Upload coverage
         run: |
