Rename the pkg-config usage to `pkg_config` to be more consistent with other spellings

--- a/mopack/defaults/boost.yml
+++ b/mopack/defaults/boost.yml
@@ -30,5 +30,5 @@ usage:
         '*':
           libraries: boost_$submodule
   system: *path_system_usage
-  pkg-config:
+  pkg_config:
     submodule_map: null
