--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,10 @@ jobs:
         python-version: [3.6, 3.7, 3.8, 3.9]
 
         include:
-          - os: ubuntu-latest
-            extra-tests: [apt, mingw-cross]
-          - os: windows-latest
-            compiler: cc
-            skipped-tests: [boost]
+          - {os: ubuntu-latest, extra-tests: [apt, mingw-cross]}
+          - {os: windows-latest, compiler: msvc, msvc-version: '14.28',
+             win-sdk: '10.0.18362.0', boost-version: '1.72.0'}
+          - {os: windows-latest, compiler: cc, skipped-tests: [boost]}
         exclude:
           - os: ubuntu-latest
             compiler: msvc
@@ -32,6 +31,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Cache Boost binaries
+        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
+        uses: actions/cache@v2.1.4
+        id: cache-boost
+        with:
+          path: C:\boost-${{ matrix.boost-version }}
+          key: >
+            ${{ matrix.os }}-boost-${{ matrix.boost-version }}-msvc-${{
+            matrix.msvc-version }}-python-${{ matrix.python-version }}-${{
+            hashFiles('.github/workflows/build.yml') }}
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
@@ -45,6 +54,19 @@ jobs:
         run: |
           pip install ./bfg9000
           pip install codecov '.[test]'
+      - name: Install Boost ${{ matrix.boost-version }} from binaries
+        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
+        run: |
+          ${boostroot} = "C:\boost-${{ matrix.boost-version }}"
+          ${msvcver} = "${{ matrix.msvc-version }}" -replace '(\d+\.\d).*','$1'
+          if ("${{ steps.cache-boost.outputs.cache-hit }}" -ne "true" ) {
+            ${boost_ver} = "${{ matrix.boost-version }}" -replace '\.','_'
+            ${boostexe} = "boost_${boost_ver}-msvc-${msvcver}-64.exe"
+            curl -LO https://sourceforge.net/projects/boost/files/boost-binaries/${{ matrix.boost-version }}/${boostexe}
+            Start-Process -Wait -FilePath ".\${boostexe}" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=${boostroot}"
+          }
+          echo "BOOST_INCLUDEDIR=${boostroot}" >> ${env:GITHUB_ENV}
+          echo "BOOST_LIBRARYDIR=${boostroot}\lib64-msvc-${msvcver}" >> ${env:GITHUB_ENV}
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -61,24 +83,31 @@ jobs:
           7z x -y glib_2.28.8-1_win32.zip -oC:\pkg-config
           7z x -y gettext-runtime_0.18.1.1-2_win32.zip -oC:\pkg-config
           echo "PKG_CONFIG=C:\pkg-config\bin\pkg-config.exe" >> ${env:GITHUB_ENV}
-          echo "BOOST_INCLUDEDIR=$env:BOOST_ROOT_1_72_0" >> ${env:GITHUB_ENV}
       - name: Install macOS dependencies
         if: matrix.os == 'macos-latest'
         run: |
           brew install ninja pkg-config boost
-      - name: Run tests (cc)
-        if: matrix.compiler == 'cc'
-        run: |
-          python setup.py coverage -q
-      - name: Run tests (msvc)
+      - name: Initialize MSVC ${{ matrix.msvc-version }}
+        if: startsWith(matrix.os, 'windows-') && matrix.compiler == 'msvc'
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          toolset: ${{ matrix.msvc-version }}
+          arch: 'x64'
+          sdk: ${{ matrix.win-sdk }}
+      - name: Set up cl.exe
         if: matrix.compiler == 'msvc'
         run: |
-          ${installpath} = vswhere -latest -property installationpath
-          Import-Module (Join-Path ${installpath} "Common7\Tools\Microsoft.VisualStudio.DevShell.dll")
-          ${null} = Enter-VsDevShell -VsInstallPath $installpath
           conan profile new default --detect
-          ${env:CC} = "cl.exe"
-          ${env:CXX} = "cl.exe"
+          echo "CC=cl.exe" >> ${env:GITHUB_ENV}
+          echo "CXX=cl.exe" >> ${env:GITHUB_ENV}
+      - name: Set up mingw
+        if: startsWith(matrix.os, 'windows-') && matrix.compiler == 'cc'
+        run: |
+          echo "PATH=C:\msys64\mingw64\bin;${env:PATH}" >> ${env:GITHUB_ENV}
+          echo "CC=gcc" >> ${env:GITHUB_ENV}
+          echo "CXX=g++" >> ${env:GITHUB_ENV}
+      - name: Run tests
+        run: |
           python setup.py coverage -q
       - name: Upload coverage
         run: |
