Add initial docs about resolving packages with mopack

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ markdown_extensions:
 
 nav:
   - Home: index.md
+  - User Guide:
+    - Resolving Packages With mopack: user/resolving.md
   - Reference:
     - Sources: reference/sources.md
     - Builders: reference/builders.md
