--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,24 +49,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: jimporter/bfg9000
+          ref: mopack-pkg-config
           path: bfg9000
       - name: Install Python dependencies
         run: |
           pip install ./bfg9000
           pip install codecov '.[test]'
-      - name: Install Boost ${{ matrix.boost-version }} from binaries
-        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
-        run: |
-          ${boostroot} = "C:\boost-${{ matrix.boost-version }}"
-          ${msvcver} = "${{ matrix.msvc-version }}" -replace '(\d+\.\d).*','$1'
-          if ("${{ steps.cache-boost.outputs.cache-hit }}" -ne "true" ) {
-            ${boost_ver} = "${{ matrix.boost-version }}" -replace '\.','_'
-            ${boostexe} = "boost_${boost_ver}-msvc-${msvcver}-64.exe"
-            curl -LO https://sourceforge.net/projects/boost/files/boost-binaries/${{ matrix.boost-version }}/${boostexe}
-            Start-Process -Wait -FilePath ".\${boostexe}" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=${boostroot}"
-          }
-          echo "BOOST_INCLUDEDIR=${boostroot}" >> ${env:GITHUB_ENV}
-          echo "BOOST_LIBRARYDIR=${boostroot}\lib64-msvc-${msvcver}" >> ${env:GITHUB_ENV}
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -87,6 +75,19 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install ninja pkg-config boost
+      - name: Install Boost ${{ matrix.boost-version }} from binaries
+        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
+        run: |
+          ${boostroot} = "C:\boost-${{ matrix.boost-version }}"
+          ${msvcver} = "${{ matrix.msvc-version }}" -replace '(\d+\.\d).*','$1'
+          if ("${{ steps.cache-boost.outputs.cache-hit }}" -ne "true" ) {
+            ${boost_ver} = "${{ matrix.boost-version }}" -replace '\.','_'
+            ${boostexe} = "boost_${boost_ver}-msvc-${msvcver}-64.exe"
+            curl -LO https://sourceforge.net/projects/boost/files/boost-binaries/${{ matrix.boost-version }}/${boostexe}
+            Start-Process -Wait -FilePath ".\${boostexe}" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=${boostroot}"
+          }
+          echo "BOOST_INCLUDEDIR=${boostroot}" >> ${env:GITHUB_ENV}
+          echo "BOOST_LIBRARYDIR=${boostroot}\lib64-msvc-${msvcver}" >> ${env:GITHUB_ENV}
       - name: Initialize MSVC ${{ matrix.msvc-version }}
         if: startsWith(matrix.os, 'windows-') && matrix.compiler == 'msvc'
         uses: ilammy/msvc-dev-cmd@v1
@@ -125,6 +126,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: jimporter/bfg9000
+          ref: mopack-pkg-config
           path: bfg9000
       - name: Install Cygwin
         shell: cmd
