--- a/test/data/mopack-inner-cmake.yml
+++ b/test/data/mopack-inner-cmake.yml
@@ -10,6 +10,6 @@ packages:
     build: cmake
     usage:
       type: path
-      include_path: $srcdir/include
+      # XXX: Pass this via `include_path` instead?
+      compile_flags: -I$srcdir/include
       library_path: .
-
