Add ability to specify/retrieve package versions

--- a/test/data/mopack-inner-cmake.yml
+++ b/test/data/mopack-inner-cmake.yml
@@ -7,6 +7,7 @@ packages:
   hello:
     source: directory
     path: hello-cmake
+    version: "1.0"
     build: cmake
     usage:
       type: path
