--- a/test/data/mopack-outer-cmake.yml
+++ b/test/data/mopack-outer-cmake.yml
@@ -2,6 +2,7 @@ packages:
   greeter:
     source: directory
     path: greeter-cmake
+    version: "1.0"
     build: cmake
     usage:
       type: path
