Add support for fetching version from a header file via regexes
This lets us move Boost version-detection code from bfg9000 to mopack!

--- a/mopack/defaults/boost.yml
+++ b/mopack/defaults/boost.yml
@@ -8,6 +8,12 @@ usage:
     - &path_usage
       if: target_platform == 'windows'
       auto_link: true
+      version:
+        type: regex
+        file: boost/version.hpp
+        regex:
+          - '^#\s*define\s+BOOST_LIB_VERSION\s+"([\d_]+)"'
+          - ['_', '.']
       include_path: >-
         ${{ env['BOOST_INCLUDEDIR'] || (
           env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/include' : null
