--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,6 +116,8 @@ jobs:
           coverage xml
       - name: Upload coverage
         uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage.xml
   build-cygwin:
     runs-on: windows-latest
     env:
@@ -157,6 +159,8 @@ jobs:
           copy C:\cygwin\home\runneradmin\bfg9000\coverage.xml .
       - name: Upload coverage
         uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage.xml
   lint:
     runs-on: ubuntu-latest
 
