--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,8 @@ jobs:
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt-get install mingw-w64 ninja-build libboost-dev
+          sudo apt-get install mingw-w64 ninja-build libboost-dev libboost-regex-dev
+          echo "MOPACK_INCLUDE_PATH=/usr/include" >> .mopack_test_env
           echo "MOPACK_LIB_NAMES=lib{}.so" >> .mopack_test_env
           echo "MOPACK_LIB_PATH=/usr/lib/x86_64-linux-gnu" >> .mopack_test_env
       - name: Install Windows dependencies
@@ -77,7 +78,9 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install ninja pkg-config boost
+          echo "MOPACK_INCLUDE_PATH=/usr/local/include" >> .mopack_test_env
           echo "MOPACK_LIB_NAMES=lib{}.dylib" >> .mopack_test_env
+          echo "MOPACK_LIB_PATH=/usr/local/lib" >> .mopack_test_env
       - name: Install Boost ${{ matrix.boost-version }} from binaries
         if: startsWith(matrix.os, 'windows-') && matrix.boost-version
         run: |
@@ -143,7 +146,9 @@ jobs:
           -P python38-pip,python38-setuptools,python38-wheel
       - name: Copy mopack to Cygwin
         run: |
+          echo "MOPACK_INCLUDE_PATH=/usr/include" >> .mopack_test_env
           echo "MOPACK_LIB_NAMES=lib{}.dll.a" >> .mopack_test_env
+          echo "MOPACK_LIB_PATH=/usr/lib" >> .mopack_test_env
           robocopy . ${env:CYGROOT}\home\runneradmin\mopack /E
           if(${LastExitCode} -le 7) { ${LastExitCode} = 0 }
       - name: Install Python dependencies
