--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
         include:
           - {os: ubuntu-latest, extra-tests: [apt, mingw-cross]}
           - {os: windows-latest, compiler: msvc, msvc-version: '14.29',
-             win-sdk: '10.0.18362.0', boost-version: '1.72.0'}
-          - {os: windows-latest, compiler: cc, skipped-tests: [boost]}
+             win-sdk: '10.0.18362.0', boost-version: '1.72.0',
+             qt-version: '5.12.9'}
+          - {os: windows-latest, compiler: cc, skipped-tests: [boost, qt]}
         exclude:
           - os: ubuntu-latest
             compiler: msvc
@@ -53,10 +54,36 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install ./bfg9000 '.[test]'
+      - name: Initialize MSVC ${{ matrix.msvc-version }}
+        if: startsWith(matrix.os, 'windows-') && matrix.compiler == 'msvc'
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          toolset: ${{ matrix.msvc-version }}
+          arch: 'x64'
+          sdk: ${{ matrix.win-sdk }}
+      - name: Install Qt ${{ matrix.qt-version }}
+        if: matrix.qt-version
+        uses: jurplel/install-qt-action@v2
+        with:
+          version: ${{ matrix.qt-version || '5.12.9' }}
+      - name: Install Boost ${{ matrix.boost-version }} from binaries
+        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
+        run: |
+          ${boostroot} = "C:\boost-${{ matrix.boost-version }}"
+          ${msvcver} = "${{ matrix.msvc-version }}" -replace '(\d+\.\d).*','$1'
+          if ("${{ steps.cache-boost.outputs.cache-hit }}" -ne "true" ) {
+            ${boost_ver} = "${{ matrix.boost-version }}" -replace '\.','_'
+            ${boostexe} = "boost_${boost_ver}-msvc-${msvcver}-64.exe"
+            curl -LO https://sourceforge.net/projects/boost/files/boost-binaries/${{ matrix.boost-version }}/${boostexe}
+            Start-Process -Wait -FilePath ".\${boostexe}" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=${boostroot}"
+          }
+          echo "BOOST_INCLUDEDIR=${boostroot}" >> ${env:GITHUB_ENV}
+          echo "BOOST_LIBRARYDIR=${boostroot}\lib64-msvc-${msvcver}" >> ${env:GITHUB_ENV}
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt-get install mingw-w64 ninja-build libboost-dev libboost-regex-dev
+          sudo apt-get install mingw-w64 ninja-build libboost-dev \
+            libboost-regex-dev qt5-default
           echo "MOPACK_INCLUDE_PATH=/usr/include" >> .mopack_test_env
           echo "MOPACK_LIB_NAMES=lib{}.so" >> .mopack_test_env
           echo "MOPACK_LIB_PATH=/usr/lib/x86_64-linux-gnu" >> .mopack_test_env
@@ -72,35 +99,20 @@ jobs:
           7z x -y glib_2.28.8-1_win32.zip -oC:\pkg-config
           7z x -y gettext-runtime_0.18.1.1-2_win32.zip -oC:\pkg-config
           echo "PKG_CONFIG=C:\pkg-config\bin\pkg-config.exe" >> ${env:GITHUB_ENV}
+          # Set up environment variables.
+          if(${env:Qt5_DIR}) {
+            echo "QT_ROOT=${env:Qt5_DIR}" >> ${env:GITHUB_ENV}
+          }
 
           echo "MOPACK_LIB_NAMES={}.lib;lib{}.dll.a" >> .mopack_test_env
       - name: Install macOS dependencies
         if: matrix.os == 'macos-latest'
         run: |
-          brew install ninja pkg-config boost
+          brew install ninja pkg-config boost qt5
+          brew link qt5 --force
           echo "MOPACK_INCLUDE_PATH=/usr/local/include" >> .mopack_test_env
           echo "MOPACK_LIB_NAMES=lib{}.dylib" >> .mopack_test_env
           echo "MOPACK_LIB_PATH=/usr/local/lib" >> .mopack_test_env
-      - name: Install Boost ${{ matrix.boost-version }} from binaries
-        if: startsWith(matrix.os, 'windows-') && matrix.boost-version
-        run: |
-          ${boostroot} = "C:\boost-${{ matrix.boost-version }}"
-          ${msvcver} = "${{ matrix.msvc-version }}" -replace '(\d+\.\d).*','$1'
-          if ("${{ steps.cache-boost.outputs.cache-hit }}" -ne "true" ) {
-            ${boost_ver} = "${{ matrix.boost-version }}" -replace '\.','_'
-            ${boostexe} = "boost_${boost_ver}-msvc-${msvcver}-64.exe"
-            curl -LO https://sourceforge.net/projects/boost/files/boost-binaries/${{ matrix.boost-version }}/${boostexe}
-            Start-Process -Wait -FilePath ".\${boostexe}" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=${boostroot}"
-          }
-          echo "BOOST_INCLUDEDIR=${boostroot}" >> ${env:GITHUB_ENV}
-          echo "BOOST_LIBRARYDIR=${boostroot}\lib64-msvc-${msvcver}" >> ${env:GITHUB_ENV}
-      - name: Initialize MSVC ${{ matrix.msvc-version }}
-        if: startsWith(matrix.os, 'windows-') && matrix.compiler == 'msvc'
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          toolset: ${{ matrix.msvc-version }}
-          arch: 'x64'
-          sdk: ${{ matrix.win-sdk }}
       - name: Set up cl.exe
         if: matrix.compiler == 'msvc'
         run: |
@@ -127,6 +139,7 @@ jobs:
       CYGROOT: C:\cygwin
       CYGCACHE: C:\cygwin\var\cache\setup
       CONAN_CMAKE_GENERATOR: Ninja
+      MOPACK_SKIPPED_TESTS: qt
 
     steps:
       - uses: actions/checkout@v2
