Improve the naming of the fields for `mopack usage`
This also (temporarily?) removes the `extra_args` option from pkg_config
usage. I'm not sure it's actually needed, and it adds complexity to
path/system usage.

--- a/mopack/defaults/Qt5.yml
+++ b/mopack/defaults/Qt5.yml
@@ -7,7 +7,7 @@ usage:
       '*':
         &submodule_map
         dependencies: ['Qt5[Core]']
-        pcfile: Qt5$submodule
+        pcname: Qt5$submodule
         include_path: >-
           ${{ env['QT_INCLUDEDIR'] ?
                 [ env['QT_INCLUDEDIR'],
