Move coverage configuration to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,21 @@ license_file = LICENSE
 extend-exclude = build,dist,deb_dist
 extend-ignore = E201,E202,E221,F403,F405
 filename = *.py
+
+[coverage:run]
+source = ${TOP_SRCDIR-.}/mopack
+parallel = True
+branch = True
+
+[coverage:paths]
+source =
+  mopack/
+  /usr/local/lib/*/site-packages/mopack/
+
+[coverage:report]
+exclude_lines =
+  pragma: no cover
+  raise NotImplementedError
+  return NotImplemented
+  def __repr__
+  assert False
