--- a/test/data/mopack-broken-patch.yml
+++ b/test/data/mopack-broken-patch.yml
@@ -1,6 +1,6 @@
 packages:
   hello:
-    source: tarball
+    origin: tarball
     path: broken-bfg.tar.gz
     patch: hello-bfg.patch
     build: bfg9000
